--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.javatpoint.application1</groupId>
-  <artifactId>Login-Signup-WebApp</artifactId>
+   <groupId>com.example.projects</groupId>
+  <artifactId>weblogin_page</artifactId>
   <packaging>war</packaging>
-  <version>2</version>
+  <version>1.0-SNAPSHOT</version>
+  <name>Documented Project</name>
 
 </project>
 ~
