--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <groupId>com.example.projects</groupId>
   <artifactId>weblogin_page</artifactId>
   <packaging>war</packaging>
-  <modelVersion>4.0.0</modelVersion>
+  <modelVersion>3.0.0</modelVersion>
   <version>1.0-SNAPSHOT</version>
-  <name>Documented Project</name>
+  <name>login_project</name>
 
 </project>
 
