--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <version>1.0-SNAPSHOT</version>
   <name>login_project</name>
-  <failOnMissingWebXml>false</failOnMissingWebXml>
-
+  <properties>
+    <failOnMissingWebXml>false</failOnMissingWebXml>   
+</properties>
 </project>
 
